--- a/markup/scss/base/_variables.scss
+++ b/markup/scss/base/_variables.scss
@@ -17,6 +17,7 @@ $dove-black:#363636;
 $green:#58a36f;
 $red:#e14646;
 $dove-gray:#edf2f8;
+$sharp-musterd:#1ab394;
 
 $base-font-sans-serif: 'Open Sans', Arial, sans-serif;
 $base-font-serif: 'Times New Roman', 'Times', 'Baskerville', 'Georgia', serif;
