--- a/markup/css/main.css
+++ b/markup/css/main.css
@@ -403,8 +403,8 @@ th {
 
 @font-face {
   font-family: 'icomoon';
-  src: url("../fonts/icomoon.eot?l3plj3");
-  src: url("../fonts/icomoon.eot?l3plj3#iefix") format("embedded-opentype"), url("../fonts/icomoon.ttf?l3plj3") format("truetype"), url("../fonts/icomoon.woff?l3plj3") format("woff"), url("../fonts/icomoon.svg?l3plj3#icomoon") format("svg");
+  src: url("../fonts/icomoon.eot?v8fkwu");
+  src: url("../fonts/icomoon.eot?v8fkwu#iefix") format("embedded-opentype"), url("../fonts/icomoon.ttf?v8fkwu") format("truetype"), url("../fonts/icomoon.woff?v8fkwu") format("woff"), url("../fonts/icomoon.svg?v8fkwu#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -421,6 +421,22 @@ th {
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-clothes-tag:before {
+  content: "\e90e";
+}
+
+.icon-rent:before {
+  content: "\e90f";
+}
+
+.icon-flash-activation:before {
+  content: "\e90b";
+}
+
+.icon-list:before {
+  content: "\e90c";
 }
 
 .icon-menu:before {
@@ -441,6 +457,10 @@ th {
 
 .icon-contact_phone:before {
   content: "\e905";
+}
+
+.icon-clock:before {
+  content: "\e90d";
 }
 
 .icon-cross:before {
@@ -467,7 +487,7 @@ th {
   content: "\e902";
 }
 
-#sidebar-dashboard .accordion, #sidebar-dashboard .accordion li .slide, .addPropertyFormContianer .section-listing, .addPropertyFormContianer .tabset, .addPropertyFormContianer .property-add .radio-holder, .addPropertyFormContianer .feature-list, .addPropertyFormContianer .image-uploading-area {
+#sidebar-dashboard .sideBar-links, #sidebar-dashboard .sideBar-links li .sub-links, .addPropertyFormContianer .section-listing, .addPropertyFormContianer .tabset, .addPropertyFormContianer .property-add .radio-holder, .addPropertyFormContianer .feature-list, .addPropertyFormContianer .image-uploading-area {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -766,6 +786,7 @@ a {
   height: 25px;
   position: relative;
   margin: 13px 0 0 20px;
+  cursor: pointer;
 }
 
 #header .sideBar-opener:after, #header .sideBar-opener:before, #header .sideBar-opener span {
@@ -872,7 +893,7 @@ a {
   overflow: auto;
   width: 300px;
   height: 100vh;
-  background: #2e2e2e;
+  background: #000 linear-gradient(to right, #3a3633 93%, #2a2725 100%);
   position: fixed;
   top: 52px;
   left: 0;
@@ -888,6 +909,7 @@ a {
 #sidebar-dashboard .user-picture {
   padding: 10px 5px;
   overflow: hidden;
+  border-bottom: 1px solid #000;
 }
 
 #sidebar-dashboard .user-picture .image-thumb {
@@ -938,48 +960,94 @@ a {
   color: #fff;
 }
 
-#sidebar-dashboard .accordion {
+#sidebar-dashboard .sideBar-links {
+  border-top: 1px solid #606060;
   font-size: 16px;
   line-height: 19px;
+  text-transform: capitalize;
+  padding: 10px 0 0;
 }
 
-#sidebar-dashboard .accordion li {
-  margin: 0 0 10px;
+#sidebar-dashboard .sideBar-links li {
+  margin: 0 0 5px;
   display: block;
 }
 
-#sidebar-dashboard .accordion li .opener {
+#sidebar-dashboard .sideBar-links li.active > a {
+  background: rgba(77, 118, 134, 0.5);
+  border-color: #3a7775;
+  color: #fff;
+}
+
+#sidebar-dashboard .sideBar-links li .badge {
+  background: #999;
+  border-radius: 4px;
+  font-size: 12px;
+  line-height: 15px;
+  color: #fff;
+  padding: 5px;
+  float: right;
+  margin: 0 10px 0 0;
+}
+
+#sidebar-dashboard .sideBar-links li .badge.small {
+  font-size: 12px;
+  line-height: 14px;
+  padding: 3px;
+  background: rgba(153, 153, 153, 0.5);
+}
+
+#sidebar-dashboard .sideBar-links li a {
   display: block;
   color: #fff;
-  background: #363636;
   text-decoration: none;
   padding: 10px 20px;
+  color: #dde2e8;
+  transition: color 0.4s ease;
+  border: 1px solid transparent;
+  margin: 0 0 5px;
 }
 
-#sidebar-dashboard .accordion li .opener:hover {
-  background: #606060;
-}
-
-#sidebar-dashboard .accordion li .slide {
+#sidebar-dashboard .sideBar-links li a:hover {
+  background: rgba(77, 118, 134, 0.5);
+  border-color: #3a7775;
   color: #fff;
-  background: #606060;
-  font-size: 13px;
+}
+
+#sidebar-dashboard .sideBar-links li a [class^="icon-"], #sidebar-dashboard .sideBar-links li a [class*="icon-"] {
+  display: inline-block;
+  vertical-align: middle;
+  margin: -2px 10px 0 0;
+}
+
+#sidebar-dashboard .sideBar-links li a [class^="icon-"]:before, #sidebar-dashboard .sideBar-links li a [class*="icon-"]:before {
+  font-size: 22px;
+  line-height: 1;
+}
+
+#sidebar-dashboard .sideBar-links li .sub-links {
+  font-size: 14px;
   line-height: 16px;
 }
 
-#sidebar-dashboard .accordion li .slide li {
-  display: block;
+#sidebar-dashboard .sideBar-links li .sub-links li {
+  margin: 0 0 10px;
 }
 
-#sidebar-dashboard .accordion li .slide li a {
-  display: block;
-  text-decoration: none;
-  color: #fff;
+#sidebar-dashboard .sideBar-links li .sub-links li a {
   padding: 5px 30px;
+  transition: color 0.4s ease;
 }
 
-#sidebar-dashboard .accordion li .slide li a:hover {
-  background: #606060;
+#sidebar-dashboard .sideBar-links li .sub-links li a [class^="icon-"], #sidebar-dashboard .sideBar-links li .sub-links li a [class*="icon-"] {
+  display: inline-block;
+  vertical-align: middle;
+  margin: -2px 10px 0 0;
+}
+
+#sidebar-dashboard .sideBar-links li .sub-links li a [class^="icon-"]:before, #sidebar-dashboard .sideBar-links li .sub-links li a [class*="icon-"]:before {
+  font-size: 15px;
+  line-height: 1;
 }
 
 .addPropertyFormContianer {
