--- a/markup/scss/main.scss
+++ b/markup/scss/main.scss
@@ -67,6 +67,7 @@ a{ outline: none;}
 		@include squar(40px, 25px);
 		position: relative;
 		margin: 13px 0 0 20px;
+		cursor: pointer;
 		
 		&:after, &:before, span{
 			position: absolute;
@@ -96,6 +97,7 @@ a{ outline: none;}
 				margin: -5px 0 0;
 				transition: left 0.4s ease, right 0.4s ease;
 			}
+			
 			&:after {
 				left: auto;
 				right: -8px;
@@ -160,7 +162,7 @@ a{ outline: none;}
 #sidebar-dashboard{
 	overflow: auto;
 	@include squar(300px, 100vh);
-	background: $mix-black;
+	background: $black linear-gradient(to right, #3a3633 93%, #2a2725 100%);
 	position: fixed;
 	top: 52px;
 	left: 0;
@@ -175,6 +177,7 @@ a{ outline: none;}
 		padding: 10px 5px;
 		@extend .text-center;
 		overflow: hidden;
+		border-bottom: 1px solid $black;
 		
 		.image-thumb{
 			@include squar(70px,70px);
@@ -214,42 +217,86 @@ a{ outline: none;}
 		
 		&:hover {  color: $white;}
 	}
-	.accordion{
+	.sideBar-links {
+		border-top: 1px solid $mix-grays;
 		@extend %listreset;
 		@include font(16,19);
+		text-transform: capitalize;
+		padding: 10px 0 0;
 		
 		li{
-			margin: 0 0 10px;
+			margin: 0 0 5px;
 			display: block;
 			
-			.opener {
-				display: block;
-				color: $white;
-				background: $dove-black;
-				text-decoration: none;
-				padding: 10px 20px;
-				
-				&:hover {
-					background: $mix-grays;
+			&.active{
+				> a{
+					background: rgba(77, 118, 134, 0.5);
+					border-color: #3a7775;
+					color: $white;
 				}
 			}
 			
-			.slide{
-				@extend %listreset;
+			.badge {
+				background: $gray;
+				border-radius: 4px;
+				@include font(12,15);
 				color: $white;
-				background: $mix-grays;
-				@include font(13,16);
+				padding: 5px;
+				float: right;
+				margin: 0 10px 0 0;
+				
+				&.small{
+					@include font(12,14);
+					padding: 3px;
+					background: rgba($gray, 0.5);
+				}
+			}
+			
+			a {
+				display: block;
+				color: $white;
+				text-decoration: none;
+				padding: 10px 20px;
+				color: $light-gray;
+				transition: color 0.4s ease;
+				border: 1px solid transparent;
+				margin: 0 0 5px;
+				
+				&:hover{
+					background: rgba(77, 118, 134, 0.5);
+					border-color: #3a7775;
+					color: $white;
+				}
+				
+				[class^="icon-"],[class*="icon-"]{
+					@include align(middle);
+					margin: -2px 10px 0 0;
+					&:before{
+						font-size: 22px;
+						line-height: 1;
+					}
+				} 
+			}
+			.sub-links{
+				@extend %listreset;
+				@include font(14,16);
 				
 				li{
-					display: block;
+					margin: 0 0 10px;
 					
 					a{
-						display: block;
-						text-decoration: none;
-						color: $white;
 						padding: 5px 30px;
+						transition: color 0.4s ease;
 						
-						&:hover { background: $mix-grays;}
+						[class^="icon-"],[class*="icon-"]{
+							@include align(middle);
+							margin: -2px 10px 0 0;
+							
+							&:before{
+								font-size: 15px;
+								line-height: 1;
+							}
+						} 
 					}
 				}
 			}
